# stlcpp

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  default.nix  playground.nix  stlcpp.nix  stlcpp.sublime-syntax  stlcpp.vim  test.nix
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  stdlib_function.yml
.github/workflows/: pages.yml  publish.yml  test.yml
examples/: absurd.stlc  ackermann.stlc  branch_order.stlc  church.stlc  comments.stlc  even.stlc  exists_default.stlc  exists_nat_like.stlc  fib.stlc  import.stlc  io.stlc  is_prime.stlc  launcher.stlc  list.stlc  nat.stlc  objects.stlc  panic.stlc  parser.stlc  rank2.stlc  read_int.stlc  simple.stlc  sum_csv.stlc  syntax.stlc  todo.stlc  unimplemented.stlc  var.stlc  var_func.stlc
examples/errors/: alias_holes.stlc  alias_mismatch.stlc  duplicate.stlc  parse1.stlc  reserved.stlc  simple.stlc  type_errors.stlc  type_fixpoint.stlc  type_mutual.stlc
npins/: sources.json
playground/: .gitignore  README.md  index.html  index.js  package-lock.json  package.json  server.py  vite.config.js
playground/src/: editor.js  main.js  style.css
src/: context.rs  errors.rs  lib.rs  module.rs  parse.rs  syntax.rs  term.rs  type.rs  util.rs  vfs.rs  wasm.rs
src/module/: parse.rs
src/syntax/: parse.rs
std/: aliases.stlc  bool.stlc  char.stlc  empty.stlc  extra.stlc  int.stlc  io.stlc  list.stlc  option.stlc  random.stlc  string.stlc  sum.stlc  syntax.stlc  void.stlc
tests/: declaration.rs  example.stlc  is_value.rs  module.rs  multistep.rs  parse.rs  step.rs  subst.rs
(+16 files in other folders)
