[package]
name = "stlcpp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "stlcpp"
path = "bin/main.rs"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
include_dir = "0.7.4"
nom = "8.0.0"
nom-language = "0.1.0"
nom_locate = "5.0.0"
num-bigint = "0.4.6"
wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustyline = "17.0.1"
